--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Survey Page</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery.js"></script>
